# static_linkage_opt

./: .gitignore  CMakeLists.txt  lib.h  static_linkage_opt.sln
dll/: CMakeLists.txt  dll.vcxproj  dll.vcxproj.filters  main.cpp
exe/: CMakeLists.txt  exe.cpp  exe.vcxproj
static_lib/: CMakeLists.txt  StaticLib.vcxproj  StaticLib.vcxproj.filters  StaticLib1.cpp  StaticLib2.cpp
